added responsive search bar, removed navigation header from mobile layout

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,6 +1,4 @@
-/* -------------------------------
-   Root Variables & Typography
--------------------------------- */
+/*Root Variables & Typography*/
 :root {
 
    /* Color palette  */
